--- a/study-planner-app/app/src/main/AndroidManifest.xml
+++ b/study-planner-app/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".JoinActivity"></activity>
+        <activity android:name=".UserActivity"></activity>
     </application>
 
 </manifest>
